# fcc-generator

./: .gitignore  B2tautau.dec  CMakeLists.txt  GeneratorConfig.h.in  README.md  Z2WW.cmnd  Z2uubar.cmnd  background_Bd2DsKTauNu.dec  background_Bd2DsKTauNu_with_Ds2PiPiPiK.dec  background_Bd2DsKTauNu_with_Ds2PiPiPiPi.dec  background_Bs2DsDsK.dec  background_Bs2DsDsK_2.dec  background_Bs2DsDsK_with_Ds2PiPiPiK.dec  background_Bs2DsDsK_with_Ds2PiPiPiK_and_Ds2TauNu.dec  background_Bs2DsDsK_with_Ds2PiPiPiPi.dec  background_Bs2DsDsK_with_Ds2PiPiPiPi_and_Ds2PiPiPiK.dec  background_Bs2DsDsK_with_Ds2TauNu.dec  init.sh  pythia.cmnd  signal.dec  special_Bs2DsK_with_Ds2KKPi.dec  special_Bs2DsPi_with_Ds2KKPi.dec  user.dec
cmake/: FindEvtGen.cmake  FindHepMC.cmake  FindPYTHIA8.cmake  FindPhotos.cmake  FindROOT.cmake  FindTauola.cmake
src/: CMakeLists.txt
src/generator/: CMakeLists.txt  generator.cpp
src/generator-B2tautau/: CMakeLists.txt  generator-B2tautau.cpp
src/generator-Bs2tautau/: CMakeLists.txt  generator-Bs2tautau.cpp
src/generator-Z2WW/: CMakeLists.txt  generator-Z2WW.cpp
src/generator-Z2uubar/: CMakeLists.txt  generator-Z2uubar.cpp
src/generator-inclusive/: CMakeLists.txt  generator-inclusive.cpp
src/generator_Z2uubar/: CMakeLists.txt  generator_Z2uubar.cpp
